fix: change the naming scheme of the generated service/*.go  to snakecase

--- a/tpl/kitex/server/standard/service.yaml
+++ b/tpl/kitex/server/standard/service.yaml
@@ -1,4 +1,4 @@
-path: biz/service/{{ (index .Methods 0).Name }}.go
+path: biz/service/{{ SnakeString (index .Methods 0).Name }}.go
 loop_method: true
 update_behavior:
   type: skip
