--- a/tpl/kitex/server/standard/service_test.yaml
+++ b/tpl/kitex/server/standard/service_test.yaml
@@ -1,4 +1,4 @@
-path: biz/service/{{ (index .Methods 0).Name }}_test.go
+path: biz/service/{{ SnakeString (index .Methods 0).Name }}_test.go
 loop_method: true
 update_behavior:
   type: skip
