--- a/tpl/hertz/standard/layout.yaml
+++ b/tpl/hertz/standard/layout.yaml
@@ -67,10 +67,10 @@ layouts:
       	hlog.SetLogger(logger)
       	hlog.SetLevel(conf.LogLevel())
       	hlog.SetOutput(&lumberjack.Logger{
-      		Filename:   conf.GetConf().Hertz.LogFileName,
-      		MaxSize:    conf.GetConf().Hertz.LogMaxSize,
-      		MaxBackups: conf.GetConf().Hertz.LogMaxBackups,
-      		MaxAge:     conf.GetConf().Hertz.LogMaxAge,
+      		Filename:   conf.GetConf().Hertz.Log.Filename,
+      		MaxSize:    conf.GetConf().Hertz.Log.MaxSize,
+      		MaxBackups: conf.GetConf().Hertz.Log.MaxBackups,
+      		MaxAge:     conf.GetConf().Hertz.Log.MaxAge,
       	})
 
         // recovery
@@ -155,11 +155,14 @@ layouts:
       	EnablePprof   bool   `yaml:"enable_pprof"`
       	EnableGzip    bool   `yaml:"enable_gzip"`
         EnableAccessLog bool   `yaml:"enable_access_log"`
-      	LogLevel      string `yaml:"log_level"`
-      	LogFileName   string `yaml:"log_file_name"`
-      	LogMaxSize    int    `yaml:"log_max_size"`
-      	LogMaxBackups int    `yaml:"log_max_backups"`
-      	LogMaxAge     int    `yaml:"log_max_age"`
+      }
+      
+      type Log struct {
+        Level        string   `yaml:"level"`
+        Filename     string   `yaml:"filename"`
+        MaxSize      int      `yaml:"max_size"`
+        MaxBackups   int      `yaml:"max_backups"`
+        MaxAge       int      `yaml:"max_age"`
       }
 
       // GetConf gets configuration instance
@@ -233,11 +236,12 @@ layouts:
         enable_pprof: true
         enable_gzip: true
         enable_access_log: true
-        log_level: info
-        log_file_name: "log/hertz.log"
-        log_max_size: 10
-        log_max_age: 3
-        log_max_backups: 50
+        log:
+          level: info
+          filename: "log/hertz.log"
+          max_size: 10
+          max_age: 3
+          max_backups: 50
 
       mysql:
         dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
@@ -256,11 +260,12 @@ layouts:
         enable_pprof: true
         enable_gzip: true
         enable_access_log: true
-        log_level: info
-        log_file_name: "log/hertz.log"
-        log_max_size: 10
-        log_max_age: 3
-        log_max_backups: 50
+        log:
+          level: info
+          filename: "log/hertz.log"
+          max_size: 10
+          max_age: 3
+          max_backups: 50
 
       mysql:
         dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
@@ -279,11 +284,12 @@ layouts:
         enable_pprof: true
         enable_gzip: true
         enable_access_log: true
-        log_level: info
-        log_file_name: "log/hertz.log"
-        log_max_size: 10
-        log_max_age: 3
-        log_max_backups: 50
+        log:
+          level: info
+          filename: "log/hertz.log"
+          max_size: 10
+          max_age: 3
+          max_backups: 50
 
       mysql:
         dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
