--- a/tpl/kitex/server/standard/conf_test_tpl.yaml
+++ b/tpl/kitex/server/standard/conf_test_tpl.yaml
@@ -5,14 +5,15 @@ body: |-
   kitex:
     service: "{{.RealServiceName}}"
     address: ":8888"
-    log_level: info
-    log_file_name: "log/kitex.log"
-    log_max_size: 10
-    log_max_age: 3
-    log_max_backups: 50
+    log:
+      level: info
+      filename: "log/kitex.log"
+      max_size: 10
+      max_age: 3
+      max_backups: 50
 
   registry:
-    registry_address:
+    addresses:
       - 127.0.0.1:2379
     username: ""
     password: ""
