fix: kitex and name upper
Signed-off-by: rogerogers <rogers@rogerogers.com>

--- a/tpl/kitex/server/standard/conf_tpl.yaml
+++ b/tpl/kitex/server/standard/conf_tpl.yaml
@@ -38,6 +38,7 @@ body: |-
     Address  string `yaml:"address"`
     Username string `yaml:"username"`
     Password string `yaml:"password"`
+    DB       int    `yaml:"db"`
   }
 
   type Kitex struct {
