--- a/tpl/kitex/server/standard/redis.yaml
+++ b/tpl/kitex/server/standard/redis.yaml
@@ -20,7 +20,7 @@ body: |-
       Addr:     conf.GetConf().Redis.Address,
       Username: conf.GetConf().Redis.Username,
       Password: conf.GetConf().Redis.Password,
-      DB:       conf.GetConf().Redis.Db,
+      DB:       conf.GetConf().Redis.DB,
     })
     if err := RedisClient.Ping(context.Background()).Err(); err != nil {
       panic(err)
