--- a/tpl/hertz/standard/layout.yaml
+++ b/tpl/hertz/standard/layout.yaml
@@ -368,7 +368,9 @@ layouts:
       func Init() {
       	RedisClient = redis.NewClient(&redis.Options{
       		Addr:     conf.GetConf().Redis.Address,
+      		Username: conf.GetConf().Redis.Username,
       		Password: conf.GetConf().Redis.Password,
+      		DB:       conf.GetConf().Redis.DB,
       	})
       	if err := RedisClient.Ping(context.Background()).Err(); err != nil {
       		panic(err)
