--- a/tpl/kitex/server/standard/conf_tpl.yaml
+++ b/tpl/kitex/server/standard/conf_tpl.yaml
@@ -5,14 +5,17 @@ body: |-
   package conf
 
   import (
+    "bytes"
   	"io/ioutil"
   	"os"
+    "os/exec"
   	"path/filepath"
   	"sync"
 
   	"gopkg.in/validator.v2"
   	"gopkg.in/yaml.v2"
 
+    "github.com/bytedance/sonic"
   	"github.com/cloudwego/kitex/pkg/klog"
   	"github.com/kr/pretty"
   )
@@ -59,6 +62,10 @@ body: |-
   	Username        string   `yaml:"username"`
   	Password        string   `yaml:"password"`
   }
+  
+  type BindMainDir struct {
+    Dir string `json:"Dir"`
+  }
 
   // GetConf gets configuration instance
   func GetConf() *Config {
@@ -67,8 +74,7 @@ body: |-
   }
 
   func initConf() {
-    prefix := "conf"
-    confFileRelPath := filepath.Join(prefix, filepath.Join(GetEnv(), "conf.yaml"))
+    confFileRelPath := getConfAbsPath()
     content, err := ioutil.ReadFile(confFileRelPath)
     if err != nil {
       panic(err)
@@ -85,6 +91,25 @@ body: |-
     }
     conf.Env = GetEnv()
     pretty.Printf("%+v\n", conf)
+  }
+  
+  func getConfAbsPath() string {
+    cmd := exec.Command("go", "list", "-m", "-json")
+  
+    var out bytes.Buffer
+    cmd.Stdout = &out
+    cmd.Stderr = &out
+    if err := cmd.Run(); err != nil {
+      panic(err)
+    }
+  
+    bindDir := &BindMainDir{}
+    if err := sonic.Unmarshal(out.Bytes(), bindDir); err != nil {
+      panic(err)
+    }
+
+    prefix := "conf"
+    return filepath.Join(bindDir.Dir, prefix, filepath.Join(GetEnv(), "conf.yaml"))
   }
 
   func GetEnv() string {
