chore: gorm dsn default utf8mb4
Signed-off-by: rogerogers <rogers@rogerogers.com>

--- a/tpl/hertz/server/standard/layout.yaml
+++ b/tpl/hertz/server/standard/layout.yaml
@@ -264,7 +264,7 @@ layouts:
         log_max_backups: 50
 
       mysql:
-        dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
+        dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8mb4&parseTime=True&loc=Local"
 
       redis:
         address: "127.0.0.1:6379"
@@ -289,7 +289,7 @@ layouts:
         log_max_backups: 50
 
       mysql:
-        dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
+        dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8mb4&parseTime=True&loc=Local"
 
       redis:
         address: "127.0.0.1:6379"
@@ -314,7 +314,7 @@ layouts:
         log_max_backups: 50
 
       mysql:
-        dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
+        dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8mb4&parseTime=True&loc=Local"
 
       redis:
         address: "127.0.0.1:6379"
