--- a/tpl/kitex/server/standard/conf_dev_tpl.yaml
+++ b/tpl/kitex/server/standard/conf_dev_tpl.yaml
@@ -18,7 +18,7 @@ body: |-
     password: ""
 
   mysql:
-    dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8&parseTime=True&loc=Local"
+    dsn: "gorm:gorm@tcp(127.0.0.1:3306)/gorm?charset=utf8mb4&parseTime=True&loc=Local"
   
   redis:
     address: "127.0.0.1:6379"
