Revert "fix: add absolute path for config (#84)"
This reverts commit 97b4535f6fa2d113d59f2e7c09ad80787a2a1171.

--- a/tpl/hertz/server/standard/layout.yaml
+++ b/tpl/hertz/server/standard/layout.yaml
@@ -115,14 +115,11 @@ layouts:
       package conf
 
       import (
-        "bytes"
       	"io/ioutil"
       	"os"
-        "os/exec"
       	"path/filepath"
       	"sync"
 
-        "github.com/bytedance/sonic"
       	"github.com/cloudwego/hertz/pkg/common/hlog"
       	"github.com/kr/pretty"
       	"gopkg.in/validator.v2"
@@ -146,6 +143,7 @@ layouts:
       	DSN string `yaml:"dsn"`
       }
 
+
       type Redis struct {
       	Address  string `yaml:"address"`
       	Password string `yaml:"password"`
@@ -164,10 +162,6 @@ layouts:
       	LogMaxBackups int    `yaml:"log_max_backups"`
       	LogMaxAge     int    `yaml:"log_max_age"`
       }
-      
-      type BindMainDir struct {
-        Dir string `json:"Dir"`
-      }
 
       // GetConf gets configuration instance
       func GetConf() *Config {
@@ -176,7 +170,8 @@ layouts:
       }
 
       func initConf() {
-      	confFileRelPath := getConfAbsPath()
+      	prefix := "conf"
+      	confFileRelPath := filepath.Join(prefix, filepath.Join(GetEnv(), "conf.yaml"))
       	content, err := ioutil.ReadFile(confFileRelPath)
       	if err != nil {
       		panic(err)
@@ -197,26 +192,7 @@ layouts:
 
       	pretty.Printf("%+v\n", conf)
       }
-      
-      func getConfAbsPath() string {
-        cmd := exec.Command("go", "list", "-m", "-json")
-      
-        var out bytes.Buffer
-        cmd.Stdout = &out
-        cmd.Stderr = &out
-        if err := cmd.Run(); err != nil {
-          panic(err)
-        }
-      
-        bindDir := &BindMainDir{}
-        if err := sonic.Unmarshal(out.Bytes(), bindDir); err != nil {
-          panic(err)
-        }
 
-        prefix := "conf"
-        return filepath.Join(bindDir.Dir, prefix, filepath.Join(GetEnv(), "conf.yaml"))
-      }
-      
       func GetEnv() string {
       	e := os.Getenv("GO_ENV")
       	if len(e) == 0 {
@@ -246,6 +222,7 @@ layouts:
       		return hlog.LevelInfo
       	}
       }
+
 
   - path: conf/dev/conf.yaml
     delims:
@@ -321,6 +298,7 @@ layouts:
         username: ""
         password: ""
         db: 0
+
 
   - path: biz/dal/init.go
     delims:
