--- a/tpl/kitex/server/standard/conf_tpl.yaml
+++ b/tpl/kitex/server/standard/conf_tpl.yaml
@@ -5,14 +5,11 @@ body: |-
   package conf
 
   import (
-    "bytes"
     "io/ioutil"
     "os"
-    "os/exec"
     "path/filepath"
     "sync"
 
-    "github.com/bytedance/sonic"
     "github.com/cloudwego/kitex/pkg/klog"
     "github.com/kr/pretty"
     "gopkg.in/validator.v2"
@@ -35,7 +32,7 @@ body: |-
   type MySQL struct {
     DSN string `yaml:"dsn"`
   }
-  
+
   type Redis struct {
     Address  string `yaml:"address"`
     Username string `yaml:"username"`
@@ -61,10 +58,6 @@ body: |-
   	Username        string   `yaml:"username"`
   	Password        string   `yaml:"password"`
   }
-  
-  type BindMainDir struct {
-    Dir string `json:"Dir"`
-  }
 
   // GetConf gets configuration instance
   func GetConf() *Config {
@@ -73,7 +66,8 @@ body: |-
   }
 
   func initConf() {
-    confFileRelPath := getConfAbsPath()
+    prefix := "conf"
+    confFileRelPath := filepath.Join(prefix, filepath.Join(GetEnv(), "conf.yaml"))
     content, err := ioutil.ReadFile(confFileRelPath)
     if err != nil {
       panic(err)
@@ -91,25 +85,6 @@ body: |-
     conf.Env = GetEnv()
     pretty.Printf("%+v\n", conf)
   }
-  
-  func getConfAbsPath() string {
-    cmd := exec.Command("go", "list", "-m", "-json")
-  
-    var out bytes.Buffer
-    cmd.Stdout = &out
-    cmd.Stderr = &out
-    if err := cmd.Run(); err != nil {
-      panic(err)
-    }
-  
-    bindDir := &BindMainDir{}
-    if err := sonic.Unmarshal(out.Bytes(), bindDir); err != nil {
-      panic(err)
-    }
-
-    prefix := "conf"
-    return filepath.Join(bindDir.Dir, prefix, filepath.Join(GetEnv(), "conf.yaml"))
-  }
 
   func GetEnv() string {
     e := os.Getenv("GO_ENV")
@@ -118,7 +93,7 @@ body: |-
     }
     return e
   }
-  
+
   func LogLevel() klog.Level {
     level := GetConf().Kitex.LogLevel
     switch level {
