--- a/platform/web/package.json
+++ b/platform/web/package.json
@@ -16,6 +16,7 @@
     "@douyinfe/semi-ui": "^2.42.3",
     "@uiw/codemirror-theme-okaidia": "^4.21.13",
     "@uiw/react-codemirror": "^4.21.13",
+    "axios": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
