fix: add judgment
Signed-off-by: rogerogers <rogers@rogerogers.com>

--- a/tpl/kitex/client/standard/default_tpl.yaml
+++ b/tpl/kitex/client/standard/default_tpl.yaml
@@ -14,7 +14,9 @@ body: |-
       		{{- end}}
       	{{- end}}
       {{- end}}
+      {{- if .HasStreaming }}
       "{{.ImportPath}}/{{ToLower .ServiceName}}"
+      {{end}}
       "github.com/cloudwego/kitex/client/callopt"
       "github.com/cloudwego/kitex/pkg/klog"
   )
