--- a/tpl/kitex/server/standard/main_tpl.yaml
+++ b/tpl/kitex/server/standard/main_tpl.yaml
@@ -5,7 +5,10 @@ body: |-
   package main
 
   import (
+    "net"
+    
     "github.com/cloudwego/kitex/pkg/klog"
+    "github.com/cloudwego/kitex/pkg/rpcinfo"
     {{- if eq .Codec "thrift"}}
     "github.com/cloudwego/kitex/pkg/transmeta"
     {{- end }}
@@ -28,11 +31,27 @@ body: |-
   }
 
   func kitexInit() (opts []server.Option) {
+    // address
+    addr, err := net.ResolveTCPAddr("tcp", conf.GetConf().Kitex.Address)
+    if err != nil {
+      panic(err)
+    }
+    opts = append(opts, server.WithServiceAddr(addr))
+
+    // service info
+    opts = append(opts, server.WithServerBasicInfo(&rpcinfo.EndpointBasicInfo{
+    	ServiceName: conf.GetConf().Kitex.ServiceName,
+    }))
+  
     {{- if eq .Codec "thrift"}}
      // thrift meta handler
      opts = append(opts, server.WithMetaHandler(transmeta.ServerTTHeaderHandler))
     {{- end}}
-
+  
+    if err := initRegistry(&opts); err != nil {
+      panic(err)
+    }
+  
     // klog
     logger := kitexlogrus.NewLogger()
     klog.SetLogger(logger)
